@@ -9,7 +9,12 @@ http://www.tuxpaint.org/
 $Id$
 
 2021.August.7 (0.9.27)
-  * ...
+  * Documentation updates
+    ---------------------
+    * Ensured Tux Paint's built-in help ("tuxpaint --help"),
+      Unix manual ("man page"), and command-line option
+      tab-completion list all cover the full set of Tux Paint
+      options.
 
 2021.June.28 (0.9.26)
   * New Features
